<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ring</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_created">Created with love by zdenda</string>
    <string name="mute_checkbox_description">Silence ringtone when screen is flipped down</string>
    <string name="increase_checkbox_description">Gradually turn up the ringtone</string>
    <string name="sound_notification_checkbox_description">Sound notification for unreceived calls and unread SMS/MMS</string>
    <string name="missed_calls_button">Show Missed Calls</string>
    <string name="sms_textview">SMS:</string>
    <string name="unseen_textview">unseen,</string>
    <string name="unread_textview">unread</string>
    <string name="refresh_button">Refresh</string>
    <string name="mms_textview">MMS:</string>
    <string name="cancel_sound_notification_checkbox_description">Automatically cancel Sound notification when screen is unlocked</string>
    <string name="start_unlock_tracking_button">Start Screen Unlock tracking</string>
    <string name="user_present_welcome_back_toast">Welcome back! I missed you!</string>

</resources>
