<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/chkMuteEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="@string/mute_checkbox_description" />

        <CheckBox
            android:id="@+id/chkIncreaseEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/chkMuteEnabled"
            android:checked="true"
            android:text="@string/increase_checkbox_description" />

        <CheckBox
            android:id="@+id/chkSoundNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/chkIncreaseEnabled"
            android:checked="true"
            android:text="@string/sound_notification_checkbox_description" />

        <LinearLayout
            android:id="@+id/layoutDebug"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/chkSoundNotification"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/chkCancelSoundNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:checked="false"
                android:text="@string/cancel_sound_notification_checkbox_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_textview"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvUnseenSmsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 0 "
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unseen_textview"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvUnreadSmsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 0 "
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unread_textview"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:id="@+id/btSmsRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mms_textview"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvUnseenMmsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 0 "
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unseen_textview"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvUnreadMmsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 0 "
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unread_textview"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:id="@+id/btMmsRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh_button" />

            </LinearLayout>

            <Button
                android:id="@+id/btMissedCalls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed_calls_button" />

            <LinearLayout
                android:id="@+id/layoutCalls"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
